# my-makemore

./: pyproject.toml
my_makemore/: __init__.py  mlp.ipynb
my_makemore/.ipynb_checkpoints/: __init__-checkpoint.py  mlp-checkpoint.ipynb
