[tool.poetry]
name = "my-makemore"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "my_makemore"}]

[tool.poetry.dependencies]
python = "^3.11"
#torch = "^2.0.1"
torch = {version = ">=2.0.0"}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
